route narrative listview